# Hermes_AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  logging.conf  settings.py
docs/: ARCHITECTURE.md  DEBUGGING.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATION.md  api_reference.md  architecture.md  deployment.md  modal-deployment.md  production-debugging-log.md
hermes/: __init__.py  main.py
hermes/api/: __init__.py  calls.py  health.py  knowledge.py  metrics.py  tts.py  twilio.py
hermes/core/: __init__.py  adapters.py  audio.py  call.py  exceptions.py  orchestrator.py
hermes/models/: __init__.py  base.py  call.py  call_record.py  conversation.py  llm.py  prompts.py
hermes/prompts/: __init__.py  prompt_manager.py
hermes/prompts/few_shot/: examples.yaml
hermes/prompts/system/: concise.yaml  default.yaml  polite.yaml  technical.yaml
hermes/prompts/user/: query_with_context.txt
hermes/services/: __init__.py  container.py  llm.py  rag.py  stt.py  tts.py  vector_db.py
hermes/services/llm/: __init__.py  base.py  gemini.py  mock.py  rag_tool.py  tools.py
hermes/services/rag/: __init__.py  base.py  bm25.py  cache.py  chroma.py  splitter.py
hermes/services/stt/: __init__.py  base.py  deepgram.py  mock.py
hermes/services/tts/: __init__.py  audio.py  base.py  chatterbox.py  mock.py  modal_remote.py  worker_pool.py
hermes/static/: __init__.py
hermes/utils/: __init__.py  logging.py  timing.py
hermes/websocket/: __init__.py  handler.py  manager.py  schemas.py
hermes/workers/: __init__.py  scheduler.py  tts_worker.py
modal_deploy/: README.md  __init__.py  app.py  config.py  smoke_test.py  tts.py
monitoring/: prometheus.yml
scripts/: __init__.py  benchmark_tts.py  diagnose_prod_stream.py  seed_knowledge_base.py  test_deepgram_simple.py  test_modal_tts_direct.py  test_rag.py  test_websocket_greeting.py  verify_tts_streaming.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py  test_twilio.py
tests/test_core/: test_audio.py  test_orchestrator.py
tests/test_services/: test_llm.py  test_modal_remote_tts.py  test_stt.py  test_tts.py
tests/test_websocket/: __init__.py  test_handler.py
