[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Hermes Voice Support Service - AI-powered voice assistance"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hermes"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^14.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
numpy = "^1.26.0"
torch = "^2.5.0"
torchaudio = "^2.5.0"
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
chromadb = "^0.5.0"
python-multipart = "^0.0.12"
httpx = "^0.27.0"
aiofiles = "^24.1.0"
redis = "^5.2.0"
celery = "^5.4.0"
tenacity = "^9.0.0"
twilio = "^9.10.0"

# Optional dependencies for specific services
deepgram-sdk = {version = "^3.7.0", optional = true}
google-generativeai = {version = "^0.8.0", optional = true}
openai = {version = "^1.54.0", optional = true}

[tool.poetry.extras]
deepgram = ["deepgram-sdk"]
gemini = ["google-generativeai"]
openai = ["openai"]
all = ["deepgram-sdk", "google-generativeai", "openai"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["hermes", "config"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
