[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "0.1.0"
description = "Hermes Voice Support Service - AI-powered voice assistance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# Core runtime dependencies
# NOTE: setuptools is NOT required at runtime (modern Python uses importlib)
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Logging & monitoring
    "structlog>=24.4.0",
    "pyyaml>=6.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.21.0",
    # HTTP client
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # Data & storage
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    # RAG / LLM frameworks
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "rank-bm25>=0.2.2",
    # External services
    "deepgram-sdk>=3.11.0",
    "twilio>=9.10.0",
    "modal>=1.3.5",
    "soxr>=0.5.0",
    # LLM providers
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
# Additional AI model providers
openai = ["openai>=1.54.0"]

# GPU-accelerated TTS (requires CUDA)
gpu = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "chatterbox-streaming>=0.1.2",
    "perth>=1.0.0",
]

# Modal deployment tools
modal = ["modal>=1.3.5"]

# Install everything (for development or full deployment)
all = [
    "google-genai>=1.0.0",
    "openai>=1.54.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "chatterbox-streaming>=0.1.2",
    "perth>=1.0.0",
    "aiohttp>=3.10.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "asgi-lifespan>=2.1.0",
    
    # Linting & Formatting
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    
    # Type Checking
    "mypy>=1.13.0",
    
    # Git Hooks
    "pre-commit>=4.0.0",
    
    # HTTP Client
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes", "config"]

[tool.hatch.build.targets.wheel.force-include]
"hermes/prompts/system" = "hermes/prompts/system"
"hermes/prompts/user" = "hermes/prompts/user"
"hermes/prompts/few_shot" = "hermes/prompts/few_shot"

# --- Formatting & Linting ---

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# --- Testing ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
